--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: The Complete Geek Guide
 strict: True
 # site_url: Put the URL of the site here
 # repo_url: Put the URL of the git repo here
-site_description: The Command Line Labs Guide to Becoming a Complete Geek
+site_description: The Command-Line Labs Guide to Becoming a Complete Geek
 site_author: Command Line Labs
 copyright: Command Line Labs
 theme: readthedocs
