More progress on virtual machines. But may end up moving to cloud VMs for compatibility reasons. Damned Mac ARM processors make it difficult.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,16 +3,17 @@ strict: True
 # site_url: Put the URL of the site here
 # repo_url: Put the URL of the git repo here
 site_description: The Command-Line Labs Guide to Becoming a Complete Geek
-site_author: Command Line Labs
-copyright: Command Line Labs
+site_author: Command-Line Labs
+copyright: Command-Line Labs
 theme: readthedocs
 nav:
-  - introduction.md
+  - index.md
+  - requirements.md
   - getting-started.md
-  - using-linux.md
-  - basic-networking.md
-  - understanding-linux.md
-  - intro-python.md
-  - static-site.md
-  - flask-site.md
-  - administering-linux.md
+  # - using-linux.md
+  # - basic-networking.md
+  # - understanding-linux.md
+  # - intro-python.md
+  # - static-site.md
+  # - flask-site.md
+  # - administering-linux.md
